k8s-flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-flask
spec:
  selector:
    app: k8s-flask
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
